Fix wrong color css

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -8,5 +8,5 @@
   }
   
   .Active i {
-    color: #dd64c7;
+    color: #d063a6;
   }
